--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_secure_storage: ^9.1.1
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
+  flutter_riverpod: ^2.5.1
   fl_chart: ^0.68.0 # <-- TAMBAHKAN INI
 
   cupertino_icons: ^1.0.8
