--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_riverpod: ^2.5.1
   fl_chart: ^0.68.0 # <-- TAMBAHKAN INI
+  mobile_scanner: ^5.1.1
+  url_launcher: ^6.3.0 
 
   cupertino_icons: ^1.0.8
 
